--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-# ignore this folder
-.idea\
-.idea
-\.idea\workspace.xml
-
-
-# also ignore the .png, .svg, .fig, .asv, .mat
+# ignore these file types:
 *.png
 *.svg
 *.fig
@@ -12,3 +6,6 @@
 *.mat
 *.xml
 *.pyc
+
+# also ignore this PyCharm folder
+*\.idea
